--- a/portfolio.html
+++ b/portfolio.html
@@ -317,6 +317,26 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form-thumb">
+          <p class="footer-form-title">Підпишіться на розсилку</p>
+          <form class="footer-form">
+            <label class="footer-form-label">
+              <input
+                type="email"
+                class="footer-form-input"
+                name="email-subscribe"
+                placeholder="E-mail"
+                required
+              />
+            </label>
+            <button type="submit" class="footer-form-btn">
+              Підписатися
+              <svg class="footer-form-btn-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
