Update form checkbox in modal

--- a/index.html
+++ b/index.html
@@ -476,17 +476,19 @@
             ></textarea>
           </label>
           <label class="modal-form-label label-checkbox">
-            <input
-              class="modal-input-checkbox"
-              type="checkbox"
-              name="checkbox-agreement"
-              required
-            />
-            <svg class="modal-input-checkbox-icon" width="16" height="15">
-              <use href="./images/icons.svg#icon-check"></use>
-            </svg>
-            Погоджуюся з розсилкою та приймаю
-            <a class="modal-link-agreement" href="">Умови договору</a>
+            <span class="modal-input-checkbox-text">
+              <input
+                class="modal-input-checkbox"
+                type="checkbox"
+                name="checkbox-agreement"
+                required
+              />
+              <svg class="modal-input-checkbox-icon" width="16" height="15">
+                <use href="./images/icons.svg#icon-check"></use>
+              </svg>
+              Погоджуюся з розсилкою та приймаю
+              <a class="modal-link-agreement" href="">Умови договору</a>
+            </span>
           </label>
 
           <button class="modal-btn button" type="submit">Відправити</button>
