--- a/index.html
+++ b/index.html
@@ -442,30 +442,30 @@
         <form class="modal-form">
           <label class="modal-form-label label-name">
             Ім'я
-            <div class="input-thumb">
+            <span class="input-thumb">
               <input class="modal-input-name modal-input" type="text" name="name" required />
               <svg class="modal-input-name-icon input-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
-            </div>
+            </span>
           </label>
           <label class="modal-form-label label-tel">
             Телефон
-            <div class="input-thumb">
+            <span class="input-thumb">
               <input class="modal-input-tel modal-input" type="tel" name="tel" />
               <svg class="modal-input-tel-icon input-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
-            </div>
+            </span>
           </label>
           <label class="modal-form-label label-email">
             Пошта
-            <div class="input-thumb">
+            <span class="input-thumb">
               <input class="modal-input-email modal-input" type="email" name="email" required />
               <svg class="modal-input-email-icon input-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-email-black"></use>
               </svg>
-            </div>
+            </span>
           </label>
           <label class="modal-form-label label-comment">
             Коментар
